[package]
name = "rearx"
version = "0.1.4"
authors = ["Elim Garak <garak92@protonmail.com>"]
edition = "2018"
license = "GPL v3.0"
repository = "https://github.com/garak92/rearx"
description = "A TUI client for the Searx meta-engine, written in Rust"
homepage = "https://github.com/garak92/rearx"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version="1.0.124", features = ["derive"]}
prettytable-rs = "0.8.0"
termion = "1.5.6"
structopt = { version = "0.3", default-features = false }
serde_yaml = "0.8.17"
gag = "0.1.10"
